tests/data/custom-annotations/standard/annotations-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    custom.nginx.org/feature-a: "on"
    custom.nginx.org/feature-b: "512"
    custom.nginx.org/test-split-feature: "  192.168.1.1  --some-ip"
  name: custom-annotations-ingress
spec:
  rules:
  - host: custom-annotations.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
